[gd_scene load_steps=11 format=3 uid="uid://dvf1ns7e5ppg3"]

[ext_resource type="Script" path="res://Instanced Scenes/StaticBodyArea.gd" id="1_yyyn0"]
[ext_resource type="Script" path="res://Spell Effects/Testing Related/Animation_Effect.gd" id="2_b3tnq"]
[ext_resource type="Texture2D" uid="uid://b8ugg16mj4odo" path="res://Spells/Showcase Spells/Wall/Trunk Wall-Sheet.png" id="2_h1sa5"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="3_q6top"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="4_watr3"]

[sub_resource type="Resource" id="Resource_oql24"]
script = ExtResource("2_b3tnq")
animation_name = "grow"

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_u01od"]
extents_x = 1038778
extents_y = 1101672

[sub_resource type="Animation" id="Animation_r3h15"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rligu"]
resource_name = "grow"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1biau"]
_data = {
"RESET": SubResource("Animation_r3h15"),
"grow": SubResource("Animation_rligu")
}

[node name="Wall" type="SGStaticBody2D" groups=["network_sync", "pierceable"]]
collision_layer = 2
script = ExtResource("1_yyyn0")
timings = Array[int]([4])
locations = Array[int]([3])
effects = Array[Resource("res://Spell Effects/Parent Effects/Spell Effect.gd")]([SubResource("Resource_oql24")])
life_time = 150

[node name="CollisionShape2D" type="SGCollisionShape2D" parent="."]
shape = SubResource("SGRectangleShape2D_u01od")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_h1sa5")
hframes = 8

[node name="End_Time" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_q6top")
wait_ticks = 60

[node name="Ping_Time" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_q6top")
wait_ticks = 60

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_1biau")
}
script = ExtResource("4_watr3")

[connection signal="timeout" from="End_Time" to="." method="_on_end_time_timeout"]
[connection signal="timeout" from="Ping_Time" to="." method="_on_ping_time_timeout"]
